[package]
name = "sc-cli"
version = "0.46.0"
authors.workspace = true
description = "Substrate CLI interface. (polkadot v1.15.0)"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { workspace = true, default-features = true }
chrono = { workspace = true }
clap = { features = ["derive", "string", "wrap_help"], workspace = true }
fdlimit = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
libp2p-identity = { features = ["ed25519", "peerid"], workspace = true }
log = { workspace = true, default-features = true }
names = { workspace = true }
codec = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
regex = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true }
# personal fork here as workaround for: https://github.com/rust-bitcoin/rust-bip39/pull/64
bip39 = { package = "parity-bip39", version = "2.0.1", features = ["rand"] }
tokio = { version = "1.22.0", features = ["parking_lot", "rt-multi-thread", "signal"] }
sc-client-api = { path = "../api" }
sc-client-db = { path = "../db", default-features = false}
sc-executor = { path = "../executor" }
sc-keystore = { path = "../keystore" }
sc-mixnet = { path = "../mixnet" }
sc-network = { path = "../network" }
sc-service = { path = "../service", default-features = false }
sc-telemetry = { path = "../telemetry" }
sc-tracing = { path = "../tracing" }
sc-transaction-pool = { path = "../transaction-pool" }
sc-utils = { path = "../utils" }
sp-blockchain = { path = "../../primitives/blockchain" }
sp-core = { path = "../../primitives/core" }
sp-keyring = { path = "../../primitives/keyring" }
sp-keystore = { path = "../../primitives/keystore" }
sp-panic-handler = { path = "../../primitives/panic-handler" }
sp-runtime = { path = "../../primitives/runtime" }
sp-state-machine = { path = "../../primitives/state-machine" }
sp-storage = { path = "../../primitives/storage" }
sp-version = { path = "../../primitives/version" }

[dev-dependencies]
tempfile = { workspace = true }
futures-timer = { workspace = true }
sp-tracing = { default-features = true, path = "../../primitives/tracing" }

[features]
default = ["rocksdb"]
rocksdb = ["sc-client-db/rocksdb"]
