[package]
name = "sc-transaction-pool"
version = "37.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Substrate transaction pool implementation. (polkadot v1.15.0)"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
linked-hash-map = { workspace = true }
log = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
thiserror = { workspace = true }
tokio-stream = "0.1.14"
tokio = { version = "1.32.0", features = ["macros", "time"] }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus" }
sc-client-api = { path = "../api" }
sc-transaction-pool-api = { path = "api" }
sc-utils = { path = "../utils" }
sp-api = { path = "../../primitives/api" }
sp-blockchain = { path = "../../primitives/blockchain" }
sp-core = { path = "../../primitives/core" }
sp-crypto-hashing = { path = "../../primitives/crypto/hashing" }
sp-runtime = { path = "../../primitives/runtime" }
sp-tracing = { path = "../../primitives/tracing" }
sp-transaction-pool = { path = "../../primitives/transaction-pool" }
itertools = "0.10.3"

[dev-dependencies]
array-bytes = { workspace = true, default-features = true }
assert_matches = { workspace = true }
criterion = { workspace = true, default-features = true }
sc-block-builder = { default-features = true, path = "../block-builder" }
sp-consensus = { default-features = true, path = "../../primitives/consensus/common" }
substrate-test-runtime = { path = "../../test-utils/runtime" }
substrate-test-runtime-client = { path = "../../test-utils/runtime/client" }
substrate-test-runtime-transaction-pool = { path = "../../test-utils/runtime/transaction-pool" }

[[bench]]
name = "basics"
harness = false
